test/corpus/comment.txt
========
comment
========

;; This is some comment.

---

(file)

===========================
comment before transaction
===========================

; Hi
2015-06-07 *
    Assets:Cash   1 USD
    Assets:Cash   -1 USD

---

(file
    (transaction
        (date)
        (flag)
        (postings
            (posting
                (account)
                (incomplete_amount
                    (number)
                    (currency)
                )
            )
            (posting
                (account)
                (incomplete_amount
                    (unary_number_expr (minus) (number))
                    (currency)
                )
            )
        )
    )
)

==========================
comment after transaction
==========================

2015-06-07 *
    Assets:Cash   1 USD
    Assets:Cash   -1 USD
  ; Hi

---

(file
    (transaction
        (date)
        (flag)
        (postings
            (posting
                (account)
                (incomplete_amount
                    (number)
                    (currency)
                )
            )
            (posting
                (account)
                (incomplete_amount
                    (unary_number_expr (minus) (number))
                    (currency)
                )
            )
        )
    )
)

========================
comment between posting
========================

2015-06-07 *
    Assets:Cash   1 USD
    ; Hi
    Assets:Cash   -1 USD

---

(file
    (transaction
        (date)
        (flag)
        (postings
            (posting
                (account)
                (incomplete_amount
                    (number)
                    (currency)
                )
            )
            (posting
                (account)
                (incomplete_amount
                    (unary_number_expr (minus) (number))
                    (currency)
                )
            )
        )
    )
)

======================
comment after posting
======================

2015-06-07 *
    Assets:Cash   1 USD    ; Hi
    Assets:Cash   -1 USD

---

(file
    (transaction
        (date)
        (flag)
        (postings
            (posting
                (account)
                (incomplete_amount
                    (number)
                    (currency)
                )
            )
            (posting
                (account)
                (incomplete_amount
                    (unary_number_expr (minus) (number))
                    (currency)
                )
            )
        )
    )
)

================================
comment adter transaction start
================================

2015-06-07 *     ; Hi
    Assets:Cash   1 USD
    Assets:Cash   -1 USD

---

(file
    (transaction
        (date)
        (flag)
        (postings
            (posting
                (account)
                (incomplete_amount
                    (number)
                    (currency)
                )
            )
            (posting
                (account)
                (incomplete_amount
                    (unary_number_expr (minus) (number))
                    (currency)
                )
            )
        )
    )
)
